--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   mocktail: ^1.0.4
   bloc_test: ^10.0.0
   flutter_secure_storage: ^10.0.0
+  image_picker: ^1.2.1
 
 dev_dependencies:
   flutter_test:
